Translation of Compression chapter(2019) to French  (#977)
* create files

* pass 1 / mid file

* translation 2

* translation #3

* WIP

* WIP

* Boris' review

* update compression translation

* rebase from alamanac

* update and translate templates

* update &nbsp;%

* Update

* update templates/fr/2019/featured_chapters.html

* typo Huffman

Co-authored-by: Boris SCHAPIRA <borisschapira@gmail.com>
Co-authored-by: Barry Pollard <barry_pollard@hotmail.com>

--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -123,7 +123,7 @@ Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac prov
 {% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
 {% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
 
-{% 
+{%
   set localizedPartTitles = {
     "I. Page Content": "I. Contenu des pages",
     "II. User Experience": "II. Expérience Utilisateur·ice",
@@ -164,7 +164,7 @@ Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac prov
   "developers": "Développement",
   "editors": "Édition",
   "reviewers": "Relecture",
-  "translators": "Traduction", 
+  "translators": "Traduction",
   }
 %}
 
@@ -186,7 +186,7 @@ Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac prov
   "AVGP": 'Martin Splitt est un DevRel au sein de l’équipe de l’écosystème web chez Google, où il travaille à garder le Web découvrable.',
   "nektarios-paisios": 'Nektarios Paisios est un <i lang="en">software engineer</i> travaillant sur l’accessibilité de Chrome depuis 5 ans. Il se concentre principalement sur la compatibilité de Chrome avec les logiciels d’assistance tiers tels que les lecteurs d’écran et les loupes d’écran. Avant de travailler sur l’accessibilité de Chrome, Nektarios a occupé divers autres postes au sein de l’entreprise, tels que l’accessibilité GSuite et les annonces publicitaires. Nektarios est titulaire d’un doctorat en informatique de l’Université de New York.',
   "patrickhulce": '<i lang="en">Patrick Hulce is an ex-Chrome engineer, founder of <a href="https://eris.ventures/">Eris Ventures</a>, core team member of <a href="https://github.com/GoogleChrome/lighthouse">Lighthouse</a> and <a href="https://github.com/GoogleChrome/lighthouse-ci">Lighthouse CI</a>, co-organizer of the <a href="https://www.meetup.com/DallasJS/">DallasJS</a> meetup, and author of the <a href="https://github.com/patrickhulce/third-party-web">third-party-web</a> project.</i>',
-  "paulcalvano": '<i lang="en">Paul Calvano is a Web Performance Architect at <a href="https://www.akamai.com/">Akamai</a>, where he helps businesses improve the performance of their websites. He\'s also a co-maintainer of the HTTP Archive project. You can find him tweeting at <a href="https://twitter.com/paulcalvano">@paulcalvano</a>, blogging at <a href="https://paulcalvano.com">http://paulcalvano.com</a> and sharing HTTP Archive research at <a href="https://discuss.httparchive.org">https://discuss.httparchive.org</a>.</i>',
+  "paulcalvano": 'Paul Calvano est architecte performance web chez <a href="https://www.akamai.com/">Akamai</a>, où il aide les entreprises à améliorer les performances de leurs sites web. Il est également co-responsable du projet HTTP Archive. Vous pouvez le retrouver en train de tweeter à l\'adresse <a href="https://twitter.com/paulcalvano">@paulcalvano</a>, en bloguant sur <a href="https://paulcalvano.com">http://paulcalvano.com</a> et partager ses recherches HTTP Archive à <a href="https://discuss.httparchive.org">https://discuss.httparchive.org</a>.',
   "rachellcostello": 'Rachel Costello est technical SEO &amp; Content Manager chez <a href="https://www.deepcrawl.com/">DeepCrawl</a> et une conférencière internationale qui passe son temps à rechercher et à communiquer sur les derniers développements dans le SEO. Rachel gère actuellement la production de <a href="https://www.deepcrawl.com/knowledge/white-papers/">livres blancs sur les techniques de référencement </a> et des articles de recherche pour DeepCrawl, et est une chroniqueuse régulière pour <a href="https://www.searchenginejournal.com/author/rachel-costello/">Search Engine Journal</a>.',
   "ernee": '<i lang="en">Renee Johnson is a web and product consultant, a WordPress enthusiast, and frequent WordCamp organizer and volunteer. She\'s currently working with the Content Management System Developer Relations team at Google as a Product Support Specialist.</i>',
   "rviscomi": '<i lang="en">Rick Viscomi is a Senior Developer Programs Engineer at Google, working on web transparency projects like the HTTP Archive and Chrome UX Report, and studying the intersection of how websites are built and experienced. Rick is the host of <a href="https://www.youtube.com/playlist?list=PLNYkxOF6rcIBGvYSYO-VxOsaYQDw5rifJ">The State of the Web</a> in which experts discuss how the web is trending. Rick is the coauthor of <a href="https://usingwpt.com">Using WebPageTest</a>, a guide for testing web performance, and writes frequently about the web on <a href="https://dev.to/rick_viscomi">dev.to</a> and on Twitter at <a href="https://twitter.com/rick_viscomi">@rick_viscomi</a>.</i>',
