--- a/src/templates/fr/2019/featured_chapters.html
+++ b/src/templates/fr/2019/featured_chapters.html
@@ -1,4 +1,4 @@
-{%- set featured_chapter = ("accessibility","third-parties","seo","markup","cms","caching","mobile-web","resource-hints") | random %}
+{%- set featured_chapter = ("accessibility","third-parties","seo","markup","cms","caching","mobile-web","resource-hints","compression") | random %}
 {#
   Below is the full set of chapters. If all are translated then replace above line with this one.
   Other than add chapters to above first line as they are translated (min of two chapters so repeat if only one chapter)
@@ -62,8 +62,8 @@
   {%- set featured_chapter_stats = {"stat1":"40 %","label1":"des pages web sont propulsées par un CMS","stat2":"74 %","label2":"des sites utilisant un CMS utilisent WordPress","stat3":"1 232 Ko","label3":"poids des images sur page CMS (bureau)"} %}
 {%- elif featured_chapter == "compression" %}
   {%- set featured_chapter_name = "Compression" %}
-  {%- set featured_chapter_quote = "JavaScript is the most costly resource we send to browsers; having to be downloaded, parsed, compiled, and finally executed. Although browsers have significantly decreased the time it takes to parse and compile scripts, download and execution have become the most expensive stages when JavaScript is processed by a web page." %}
-  {%- set featured_chapter_stats = {"stat1":"38%","label1":"HTTP responses using text-based compression","stat2":"80%","label2":"Use of gzip compression","stat3":"56%","label3":"HTML responses not using compression"} %}
+  {%- set featured_chapter_quote = "JavaScript est la ressource la plus coûteuse que nous envoyons aux navigateurs ; il doit être téléchargé, analysé, compilé et enfin exécuté. Bien que les navigateurs aient considérablement réduit le temps nécessaire pour analyser et compiler les scripts, le téléchargement et l'exécution sont devenus les étapes les plus coûteuses lorsque JavaScript est traité par une page web." %}
+  {%- set featured_chapter_stats = {"stat1":"38%","label1":"Réponses HTTP avec compression de texte","stat2":"80%","label2":"Utilisent la compression gzip","stat3":"56%","label3":"Réponses HTML n'utilisant pas de compression"} %}
 {%- elif featured_chapter == "caching" %}
   {%- set featured_chapter_name = "Mise en cache" %}
   {%- set featured_chapter_quote = "La mise en cache est une technique permettant de réutiliser un contenu précédemment téléchargé. Elle offre un avantage significatif en termes de performance en évitant de rejouer de coûteuses requêtes. La mise en cache facilite la montée en charge d’une application, en réduisant le trafic sur le réseau à destination du serveur d'origine. Un vieux dicton dit que \"la requête la plus rapide est celle que vous n’avez pas à faire\" et la mise en cache est l’un des principaux moyens d'éviter d'avoir à refaire des requêtes." %}
