Compression featured quote #1002 (#1014)

--- a/src/templates/fr/2019/featured_chapters.html
+++ b/src/templates/fr/2019/featured_chapters.html
@@ -62,7 +62,7 @@
   {%- set featured_chapter_stats = {"stat1":"40 %","label1":"des pages web sont propulsées par un CMS","stat2":"74 %","label2":"des sites utilisant un CMS utilisent WordPress","stat3":"1 232 Ko","label3":"poids des images sur page CMS (bureau)"} %}
 {%- elif featured_chapter == "compression" %}
   {%- set featured_chapter_name = "Compression" %}
-  {%- set featured_chapter_quote = "JavaScript est la ressource la plus coûteuse que nous envoyons aux navigateurs ; il doit être téléchargé, analysé, compilé et enfin exécuté. Bien que les navigateurs aient considérablement réduit le temps nécessaire pour analyser et compiler les scripts, le téléchargement et l'exécution sont devenus les étapes les plus coûteuses lorsque JavaScript est traité par une page web." %}
+  {%- set featured_chapter_quote = "La compression HTTP est une technique qui permet de coder des informations en utilisant moins de bits que la représentation originale. Lorsqu’elle est utilisée pour la diffusion de contenu web, elle permet aux serveurs web de réduire la quantité de données transmises aux clients. La compression HTTP augmente l’efficacité de la bande passante disponible au client, réduit le poids des pages, et améliore les performances web." %}
   {%- set featured_chapter_stats = {"stat1":"38%","label1":"Réponses HTTP avec compression de texte","stat2":"80%","label2":"Utilisent la compression gzip","stat3":"56%","label3":"Réponses HTML n'utilisant pas de compression"} %}
 {%- elif featured_chapter == "caching" %}
   {%- set featured_chapter_name = "Mise en cache" %}
