--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,9 @@
               dataLayer.push(arguments);
           }
           gtag('js', new Date());
-          gtag('config', 'UA-22381566-3');
+          gtag('config', 'UA-22381566-3', {
+            'link_attribution': true
+          });
 
           function sendWebVitalsGAEvents(metric) {
             gtag('event', metric.name, {
