--- a/src/templates/base/2020/index.html
+++ b/src/templates/base/2020/index.html
@@ -61,7 +61,7 @@
 
 {% block main %}
 <main id="maincontent">
-  <section class="intro-container">
+  <section id="intro" class="intro-container">
     <div class="intro">
       <div class="intro-year">{{ year }}</div>
       <h1 class="title title-lg title-alt">{{ self.intro_title() }}</h1>
@@ -75,7 +75,7 @@
       <img src="/static/images/home-hero.png" alt="">
     </div>
   </section>
-  <section class="methodology-container">
+  <section id="methodology" class="methodology-container">
     <div class="methodology">
       <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" width="984" height="354" loading="lazy" />
     </div>
