--- a/src/templates/ja/2019/featured_chapters.html
+++ b/src/templates/ja/2019/featured_chapters.html
@@ -85,7 +85,7 @@
   {%- set featured_chapter_quote = "HTTP/2は、ほぼ20年ぶりになるWebのメイン送信プロトコルの初となるメジャーアップデートでした。それは多くの期待を持って到来し、欠点なしで無料のパフォーマンス向上を約束しました。それ以上に、HTTP/1.1が非効率なため強制されていたすべてのハックや回避策をやめることができました。デフォルトでパフォーマンスが向上するため、ドメインのバンドル、分割、インライン化、さらにはシャーディングなどはすべてHTTP/2の世界でアンチパターンになります。" %}
   {%- set featured_chapter_stats = {"stat1":"95%","label1":"HTTP/2を使用できるグローバルユーザーの割合。","stat2":"27.83%","label2":"準最適なHTTP/2優先順位付けによるモバイル要求の割合。","stat3":"8.38%","label3":"QUICをサポートするモバイルサイトの割合。"} %}
 {%- endif %}
-<section class="featured-chapter">
+<section id="featured-chapter" class="featured-chapter">
   <div class="featured-chapter-content">
     <h2 class="title title-center">注目の章</h2>
     <h3>{{ featured_chapter_name }}</h3>
