Remove inline styles from CSP (#1010)

--- a/src/templates/base/2019/contributors.html
+++ b/src/templates/base/2019/contributors.html
@@ -6,7 +6,7 @@
 
 {% block styles %}
 {{ super() }}
-<style>
+<style nonce="{{ csp_nonce() }}">
 .main {
   padding-left: 10px;
   padding-right: 10px;
