--- a/src/templates/base/2019/error.html
+++ b/src/templates/base/2019/error.html
@@ -8,7 +8,7 @@
 
 {% block styles %}
 {{ super() }}
-<style>
+<style nonce="{{ csp_nonce() }}">
 .main a.btn, .main a.btn:visited {
   color: #fff;
 }
