--- a/src/templates/base/2019/base_ebook.html
+++ b/src/templates/base/2019/base_ebook.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="/static/css/page.css?v=20200708202040" />
 <link rel="stylesheet" href="/static/css/ebook.css?v=20200707074028" />
 
-<style>
+<style nonce="{{ csp_nonce() }}">
 /* Add a print query param to format the book for printer (mirror headers and footers) */
 /* Do this as an inline-style, rather than with JavaScript in case PDF generator doesn't execute JavaScript */
 {% if request.args.get('print') == None %}
