--- a/src/templates/base/2020/contributors.html
+++ b/src/templates/base/2020/contributors.html
@@ -247,6 +247,11 @@
 </style>
 {% endblock %}
 
+{# Hide the TOC and Methodology for now #}
+{% block non_chapter_nav_links %}
+<li><a href="{{ url_for('contributors', year=year, lang=lang) }}">{{ self.contributors_title() }}</a></li>
+{% endblock %}
+
 {% block main %}
 <main id="maincontent" class="main">
   <h1 class="title title-lg">
