--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -163,6 +163,7 @@ Unless otherwise noted, the metrics in all of the 20 chapters of the Web Almanac
   "designers": "Designers",
   "developers": "Developers",
   "editors": "Editors",
+  "leads": "Leads",
   "reviewers": "Reviewers",
   "translators": "Translators", 
   }
