--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -163,6 +163,7 @@ A menos que se indique lo contrario, las métricas en los 20 capítulos del Web 
     "designers": "Diseñadores",
     "developers": "Desarrolladores",
     "editors": "Editores",
+    "leads": "Lider",
     "reviewers": "Revisores",
     "translators": "Traductores", 
     }
