--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -163,6 +163,7 @@ Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac prov
   "designers": "Design",
   "developers": "Développement",
   "editors": "Édition",
+  "leads": "Gestion de projet",
   "reviewers": "Relecture",
   "translators": "Traduction",
   }
