--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -160,6 +160,7 @@ Web Almanacは、ウェブ・コミュニティの努力によって実現して
   "designers": "デザイナー",
   "developers": "開発者",
   "editors": "編集者",
+  "leads": "リーダー",
   "reviewers": "レビュワー",
   "translators": "翻訳者", 
   }
