CSS newline linter (#1053)
* Test newline linting

* Add newlines

* Missed some newlines

* Missed new line

* Reset Action back to normal

--- a/src/static/css/ebook.css
+++ b/src/static/css/ebook.css
@@ -63,7 +63,8 @@
   margin: 0;
 }
 
-th, td {
+th,
+td {
   padding: 5px;
 }
 
@@ -88,7 +89,8 @@ tbody tr:nth-child(even) {
   text-decoration: none;
 }
 
-.content a, .content a:visited {
+.content a,
+.content a:visited {
   color: #0b1423;
 }
 
@@ -264,7 +266,8 @@ section.chapter {
   }
 }
 
-#toc, #foreword {
+#toc,
+#foreword {
   page: front-matter;
 }
 
@@ -309,7 +312,9 @@ section.chapter {
   /* We have some big tables that can't be force to break
    * So we cheat and make them small enough to fit on a page
    */
-  figure table td, figure table td li, figure table td p {
+  figure table td,
+  figure table td li,
+  figure table td p {
     font-size: 12px;
     font-size: 0.85rem;
   }
@@ -379,13 +384,19 @@ section.chapter {
     page-break-inside: avoid;
   }
 
-  h1, h2, h3, h4, h5 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
     font-weight: bold;
     page-break-after: avoid;
     page-break-inside: avoid;
   }
 
-  h1 + p, h2 + p, h3 + p {
+  h1 + p,
+  h2 + p,
+  h3 + p {
     page-break-before: avoid;
   }
 
