--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -355,7 +355,13 @@ body {
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6, .subtitle {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.subtitle {
   font-family: 'Poppins', sans-serif;
   line-height: 1.2em;
 }
@@ -364,7 +370,8 @@ b {
   font-weight: bold;
 }
 
-a:focus, a:hover {
+a:focus,
+a:hover {
   text-decoration: underline;
 }
 
@@ -528,8 +535,10 @@ h2.header {
   letter-spacing: 2px;
 }
 
-header.alt-bg a:hover, footer.alt-bg a:hover,
-header.alt-bg a:focus, footer.alt-bg a:focus {
+header.alt-bg a:hover,
+footer.alt-bg a:hover,
+header.alt-bg a:focus,
+footer.alt-bg a:focus {
   color: #f7f779;
 }
 
@@ -552,30 +561,35 @@ header.alt-bg a:focus, footer.alt-bg a:focus {
   color: #1a2b49;
 }
 
-.top-header, footer {
+.top-header,
+footer {
   padding-top: 40px;
   padding-bottom: 40px;
 }
 
-.top-header, footer .nav {
+.top-header,
+footer .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-header nav ul, footer nav ul {
+header nav ul,
+footer nav ul {
   display: flex;
   align-items: center;
   margin: 0;
   padding-inline-start: 0;
 }
 
-header nav li, footer nav li {
+header nav li,
+footer nav li {
   display: flex;
   line-height: 1.4em;
 }
 
-header nav .menu li .year-switcher, header nav .menu li .language-switcher {
+header nav .menu li .year-switcher,
+header nav .menu li .language-switcher {
   margin-bottom: 4em;
 }
 
@@ -696,7 +710,9 @@ header .cta {
   color: #0b1423;
 }
 
-h2, h3, h4 {
+h2,
+h3,
+h4 {
   margin-top: 2em;
 }
 
@@ -706,7 +722,11 @@ h4 code {
   font-size: inherit;
 }
 
-p, td, th, code, li {
+p,
+td,
+th,
+code,
+li {
   font-size: 17px;
   font-size: 1.0625rem;
   line-height: 1.5em;
@@ -842,7 +862,8 @@ p.copyright a {
 
 @media (max-width: 900px) and (min-width: 601px) {
   /* Header */
-  .top-header, footer {
+  .top-header,
+  footer {
     position: relative;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -960,7 +981,12 @@ p.copyright a {
 
 /* Mobile View */
 @media (max-width: 600px) {
-  body, p, td, th, code, li {
+  body,
+  p,
+  td,
+  th,
+  code,
+  li {
     font-size: 16px;
     font-size: 1rem;
   }
@@ -976,7 +1002,8 @@ p.copyright a {
   }
 
   /* Header */
-  .top-header, footer {
+  .top-header,
+  footer {
     position: relative;
     padding-top: 30px;
     padding-bottom: 30px;
