--- a/src/static/css/print.css
+++ b/src/static/css/print.css
@@ -1,4 +1,12 @@
-.top-header, .index, .discuss, #chapter-navigation, footer .navigation-logo, footer .nav-items, footer .language-switcher, footer .social-media, footer hr {
+.top-header,
+.index,
+.discuss,
+#chapter-navigation,
+footer .navigation-logo,
+footer .nav-items,
+footer .language-switcher,
+footer .social-media,
+footer hr {
   display: none;
 }
 
@@ -10,7 +18,12 @@ a.btn {
   display: none;
 }
 
-h1, h2, h3, p, p.copyright, p.copyright a {
+h1,
+h2,
+h3,
+p,
+p.copyright,
+p.copyright a {
   color: black;
 }
 
