--- a/src/templates/fr/2019/contributors.html
+++ b/src/templates/fr/2019/contributors.html
@@ -10,6 +10,7 @@
 {% block date_modified %}2020-07-10T00:00:00.000Z{% endblock %}
 
 {% block filter_by_team %}Filtrer par équipe&nbsp;: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> sur <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> contributeurs et contributrices.{% endblock %}
+{% block filter_by %}Filtrer par{% endblock %}
 
 {% block join_the_team_title %}Rejoignez les équipe Web Almanac{% endblock %}
 {% block join_the_team_text %}Rejoignez l'équipe&nbsp;!{% endblock %}
