--- a/src/templates/es/2020/contributors.html
+++ b/src/templates/es/2020/contributors.html
@@ -8,6 +8,7 @@
 {% block date_modified %}2020-07-14T00:00:00.000Z{% endblock %}
 
 {% block filter_by_team %}Filtrar por equipo: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> de <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> contributors.{% endblock %}
+{% block filter_by %}Filtrar por{% endblock %}
 
 {% block join_the_team_title%}Únete al equipo de Web Almanac{% endblock %}
 {% block join_the_team_text%}¡Únete al equipo!{% endblock %}
