--- a/src/templates/ja/2020/contributors.html
+++ b/src/templates/ja/2020/contributors.html
@@ -8,6 +8,7 @@
 {% block date_modified %}2020-07-14T00:00:00.000Z{% endblock %}
 
 {% block filter_by_team %}チームでフィルタリング： <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> の <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> 貢献者。{% endblock %}
+{% block filter_by %}フィルタリング{% endblock %}
 
 {% block join_the_team_title%}Web Almanacチームに参加しましょう{% endblock %}
 {% block join_the_team_text%}チームに参加しよう！{% endblock %}
