fix typo accessibility translation in Japanese (#1064)

--- a/src/templates/ja/2019/ebook.html
+++ b/src/templates/ja/2019/ebook.html
@@ -2079,7 +2079,7 @@
       >などのJavaScriptライブラリの使用などさまざまな方法で実装できます。
     </p>
     <p>2019年8月、Chrome76では<code>&lt;img&gt;</code>を使用したマークアップベースの遅延ローディングのサポートが開始されました。2019年のWeb Almanacに使用されたウェブサイトのスナップショットは2019年7月のデータを使用していますが、2,509以上のウェブサイトがすでにこの機能を利用していました。</p>
-    <h3 id="media-アクセンシビリティ"><a href="#media-アクセンシビリティ" class="anchor-link">アクセンシビリティ</a></h3>
+    <h3 id="media-アクセシビリティ"><a href="#media-アクセシビリティ" class="anchor-link">アクセシビリティ</a></h3>
     <p>画像アクセシビリティの中心にあるのは <code>alt</code> タグです。画像に <code>alt</code> タグが追加されると、このテキストは画像を見ることができない（障害のある、インターネット接続が悪いのいずれかの理由で）ユーザーに画像を説明するために使用されます。</p>
     <p>データセットのHTMLファイルに含まれるすべての画像タグを検出できます。デスクトップでは1,300万個、モバイルでは1,500万個の画像タグのうち、91.6％の画像に<code>alt</code>タグが存在しています。一見すると、ウェブ上では画像のアクセシビリティは非常に良好な状態にあるように見えます。しかし、よく調べてみると、見通しはあまり良くありません。データセットに存在する<code>alt</code>タグの長さを調べると、<code>alt</code>タグの長さの中央値は6文字であることがわかります。これは空の<code>alt</code>タグ（<code>alt=""</code>のように見える）に対応する。6文字以上の長さの<code>alt</code>テキストを使用している画像は全体の39％にすぎない。実際の」<code>alt</code>テキストの中央値は31文字で、そのうち25文字が実際に画像を説明しています。</p>
     <h2 id="media-動画"><a href="#media-動画" class="anchor-link">動画</a></h2>
@@ -7252,7 +7252,7 @@
       <div id="cms-fig21-description" class="visually-hidden">CMSごとのLighthouse PWAスコアの中央値を示す棒グラフ。WordPressサイトのスコア中央値は0.33です。次の5つのCMS（Joomla、Drupal、Wix、Squarespace、1C-Bitrix）のスコア中央値はすべて0.3です。PWAのスコアがトップのCMSは、Jimdoが0.56、TYPO3が0.41となっています。</div>
       <figcaption id="cms-fig21-caption"><a href="#cms-fig-21" class="anchor-link">図 21.</a> CMSごとの灯台PWAカテゴリスコアの中央値。</figcaption>
     </figure>
-    <h4 id="cms-アクセンシビリティ"><a href="#cms-アクセンシビリティ" class="anchor-link">アクセンシビリティ</a></h4>
+    <h4 id="cms-アクセシビリティ"><a href="#cms-アクセシビリティ" class="anchor-link">アクセシビリティ</a></h4>
     <p>
       アクセシブルなウェブサイトとは、障害者が利用できるように設計・開発されたサイトのことです。Lighthouseは、一連のアクセシビリティ監査を提供し、それらすべての監査の加重平均を返します（各監査の加重方法の完全なリストについては、<a href="https://docs.google.com/spreadsheets/d/1Cxzhy5ecqJCucdf1M0iOzM8mIxNc7mmx107o5nj38Eo/edit#gid=1567011065">スコアリングの詳細<span class="fn">https://docs.google.com/spreadsheets/d/1Cxzhy5ecqJCucdf1M0iOzM8mIxNc7mmx107o5nj38Eo/edit#gid=1567011065</span></a
       >を参照してください）。
