Better printed ebook, including a cover (#1069)
* Change to A5 size for printing

* Add cover

* Fix cover

* Remove unnecssary code

* Fix some rems

* Fix contributors and ass printer setting

* Better alignment of cover

* Finish cover

* Make ebook resizable

* Extra params

* More rem-based styles

* Linting issues

* Update README

* Regen ebooks

* Handle large images

* Merge cover and ebook into one template

* Fix bad padding

* Merge from main

* Add Japanese version

* Move title down on cover and simplify cover args

* Better ebook instructions

* Linting errors

* Review feedback

--- a/src/templates/en/2019/base_ebook.html
+++ b/src/templates/en/2019/base_ebook.html
@@ -12,4 +12,6 @@
 
 {% block description %}Ebook version of the {{ year }} Web Almanac{% endblock %}
 
+{% block spine_title %}Web Almanac{% endblock %}
+
 {% block twitter_image_alt %}The {{ year }} Web Almanac{% endblock %}
