--- a/src/templates/base/2019/ebook.ejs.html
+++ b/src/templates/base/2019/ebook.ejs.html
@@ -78,7 +78,7 @@
                             <span class="social">
                                 {% if authordata.twitter %}
                                 <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}" aria-labelledby="{{ metadata.get('chapter') }}-author-{{ author }}-twitter">
-                                    <svg width="22" height="22" role="img">
+                                    <svg role="img">
                                         <title id="{{ metadata.get('chapter') }}-author-{{ author }}-twitter">{{ onTwitter(authordata.twitter) }}</title>
                                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
                                     </svg>
@@ -86,7 +86,7 @@
                                 {% endif %}
                                 {% if authordata.github %}
                                 <a class="github" href="https://github.com/{{ authordata.github }}" aria-labelledby="{{ metadata.get('chapter') }}-author-{{ author }}-github">
-                                    <svg width="22" height="22" role="img">
+                                    <svg role="img">
                                         <title id="{{ metadata.get('chapter') }}-author-{{ author }}-github">{{ onGitHub(authordata.github) }}</title>
                                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
                                     </svg>
@@ -94,7 +94,7 @@
                                 {% endif %}
                                 {% if authordata.website %}
                                 <a class="website" href="{{ authordata.website }}" aria-labelledby="{{ metadata.get('chapter') }}-author-{{ author }}-website">
-                                    <svg width="22" height="22" role="img">
+                                    <svg role="img">
                                         <title id="{{ metadata.get('chapter') }}-author-{{ author }}-website">{{ website(authordata.name) }}</title>
                                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
                                     </svg>
