--- a/src/templates/ja/2019/base_ebook.html
+++ b/src/templates/ja/2019/base_ebook.html
@@ -12,4 +12,6 @@
 
 {% block description %}{{ year }} Web Almanacの電子書籍版{% endblock %}
 
+{% block spine_title %}Web Almanac{% endblock %}
+
 {% block twitter_image_alt %}{{ year }} Web Almanac{% endblock %}
