Change localizedChapter names to look up by slug rather than Title (#1100)
* Change localizedChapter names to look up by slug

* Add Featured Chapters

* Update featured_chapters.html

--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -133,26 +133,26 @@ A menos que se indique lo contrario, las métricas en los 20 capítulos del Web 
   %}
   {%
     set localizedChapterTitles = {
-      "JavaScript": "JavaScript",
-      "CSS": "CSS",
-      "Markup": "Marcado Web",
-      "Media": "Media",
-      "Third Parties": "Contenido de Terceros",
-      "Fonts": "Fuentes",
-      "Performance": "Performance",
-      "Security": "Seguridad",
-      "Accessibility": "Accesibilidad",
-      "SEO": "SEO",
-      "PWA": "PWA",
-      "Mobile Web": "Web Móvil",
-      "Ecommerce": "E-commerce",
-      "CMS": "CMS",
-      "Compression": "Compresión",
-      "Caching": "Almacenamiento en Caché",
-      "CDN": "CDN",
-      "Page Weight": "Peso de las Páginas",
-      "Resource Hints": "Sugerencias de Recursos",
-      "HTTP/2": "HTTP/2"
+      "javascript": "JavaScript",
+      "css": "CSS",
+      "markup": "Marcado Web",
+      "media": "Media",
+      "third-parties": "Contenido de Terceros",
+      "fonts": "Fuentes",
+      "performance": "Performance",
+      "security": "Seguridad",
+      "accessibility": "Accesibilidad",
+      "seo": "SEO",
+      "pwa": "PWA",
+      "mobile-web": "Web Móvil",
+      "ecommerce": "E-commerce",
+      "cms": "CMS",
+      "compression": "Compresión",
+      "caching": "Almacenamiento en Caché",
+      "cdn": "CDN",
+      "page-weight": "Peso de las Páginas",
+      "resource-hints": "Sugerencias de Recursos",
+      "http2": "HTTP/2"
     }
   %}
   
