--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -133,26 +133,26 @@ Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac prov
 %}
 {%
   set localizedChapterTitles = {
-    "JavaScript": "JavaScript",
-    "CSS": "CSS",
-    "Markup": "Balisage Web",
-    "Media": "Média",
-    "Third Parties": "Tierces Parties",
-    "Fonts": "Polices d’écriture",
-    "Performance": "Performance",
-    "Security": "Sécurité",
-    "Accessibility": "Accessibilité",
-    "SEO": "SEO",
-    "PWA": "PWA",
-    "Mobile Web": "Web Mobile",
-    "Ecommerce": "E-commerce",
-    "CMS": "CMS",
-    "Compression": "Compression",
-    "Caching": "Mise en cache",
-    "CDN": "CDN",
-    "Page Weight": "Poids des pages",
-    "Resource Hints": "Indices de Ressources",
-    "HTTP/2": "HTTP/2"
+    "javascript": "JavaScript",
+    "css": "CSS",
+    "markup": "Balisage Web",
+    "media": "Média",
+    "third-parties": "Tierces Parties",
+    "fonts": "Polices d’écriture",
+    "performance": "Performance",
+    "security": "Sécurité",
+    "accessibility": "Accessibilité",
+    "seo": "SEO",
+    "pwa": "PWA",
+    "mobile-web": "Web Mobile",
+    "ecommerce": "E-commerce",
+    "cms": "CMS",
+    "compression": "Compression",
+    "caching": "Mise en cache",
+    "cdn": "CDN",
+    "page-weight": "Poids des pages",
+    "resource-hints": "Indices de Ressources",
+    "http2": "HTTP/2"
   }
 %}
 
