--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -130,26 +130,26 @@ Web Almanacは、ウェブ・コミュニティの努力によって実現して
 %}
 {%
   set localizedChapterTitles = {
-    "JavaScript": "JavaScript",
-    "CSS": "CSS",
-    "Markup": "マークアップ",
-    "Media": "メディア",
-    "Third Parties": "サードパーティ",
-    "Fonts": "フォント",
-    "Performance": "パフォーマンス",
-    "Security": "セキュリティ",
-    "Accessibility": "アクセシビリティ",
-    "SEO": "SEO",
-    "PWA": "PWA",
-    "Mobile Web": "モバイルウェブ",
-    "Ecommerce": "Eコマース",
-    "CMS": "CMS",
-    "Compression": "圧縮",
-    "Caching": "キャッシング",
-    "CDN": "CDN",
-    "Page Weight": "Page Weight",
-    "Resource Hints": "リソースのヒント",
-    "HTTP/2": "HTTP/2"
+    "javascript": "JavaScript",
+    "css": "CSS",
+    "markup": "マークアップ",
+    "media": "メディア",
+    "third-parties": "サードパーティ",
+    "fonts": "フォント",
+    "performance": "パフォーマンス",
+    "security": "セキュリティ",
+    "accessibility": "アクセシビリティ",
+    "seo": "SEO",
+    "pwa": "PWA",
+    "mobile-web": "モバイルウェブ",
+    "ecommerce": "Eコマース",
+    "cms": "CMS",
+    "compression": "圧縮",
+    "caching": "キャッシング",
+    "cdn": "CDN",
+    "page-weight": "Page Weight",
+    "resource-hints": "リソースのヒント",
+    "http2": "HTTP/2"
   }
 %}
 
