--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -133,26 +133,26 @@ Unless otherwise noted, the metrics in all of the 20 chapters of the Web Almanac
 %}
 {%
   set localizedChapterTitles = {
-    "JavaScript": "JavaScript",
-    "CSS": "CSS",
-    "Markup": "Markup",
-    "Media": "Media",
-    "Third Parties": "Third Parties",
-    "Fonts": "Fonts",
-    "Performance": "Performance",
-    "Security": "Security",
-    "Accessibility": "Accessibility",
-    "SEO": "SEO",
-    "PWA": "PWA",
-    "Mobile Web": "Mobile Web",
-    "Ecommerce": "Ecommerce",
-    "CMS": "CMS",
-    "Compression": "Compression",
-    "Caching": "Caching",
-    "CDN": "CDN",
-    "Page Weight": "Page Weight",
-    "Resource Hints": "Resource Hints",
-    "HTTP/2": "HTTP/2"
+    "javascript": "JavaScript",
+    "css": "CSS",
+    "markup": "Markup",
+    "media": "Media",
+    "third-parties": "Third Parties",
+    "fonts": "Fonts",
+    "performance": "Performance",
+    "security": "Security",
+    "accessibility": "Accessibility",
+    "seo": "SEO",
+    "pwa": "PWA",
+    "mobile-web": "Mobile Web",
+    "ecommerce": "Ecommerce",
+    "cms": "CMS",
+    "compression": "Compression",
+    "caching": "Caching",
+    "cdn": "CDN",
+    "page-weight": "Page Weight",
+    "resource-hints": "Resource Hints",
+    "http2": "HTTP/2"
   }
 %}
 
