Fix bug in Localized chapter slugs (#1105)
* Change localizedChapter names to look up by slug

* Add Featured Chapters

* Template bug fix

--- a/src/templates/en/2019/featured_chapters.html
+++ b/src/templates/en/2019/featured_chapters.html
@@ -88,7 +88,7 @@
       {% endif %}
     </div>
     <a href="{{ url_for('chapter', year=year, chapter=featured_chapter, lang=lang) }}" class="btn">
-      Read the {{ {{ localizedChapterTitles[featured_chapter] }} }} Chapter
+      Read the {{ localizedChapterTitles[featured_chapter] }} Chapter
     </a>
   </div>
 </section>
