--- a/src/templates/es/2019/featured_chapters.html
+++ b/src/templates/es/2019/featured_chapters.html
@@ -93,7 +93,7 @@
       {% endif %}
     </div>
     <a href="{{ url_for('chapter', year=year, chapter=featured_chapter, lang=lang) }}" class="btn">
-      Lea el Capítulo: {{ {{ localizedChapterTitles[featured_chapter] }} }}
+      Lea el Capítulo: {{ localizedChapterTitles[featured_chapter] }}
     </a>
   </div>
 </section>
