Removes copyright year from footer (#1112)
* Removes copyright year from footer

* Adds details to config

--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -72,7 +72,7 @@
 {% macro edition(year) %}{{ year }} 版{% endmacro %}
 
 {% block footer_title %}フッターナビゲーション{% endblock %}
-{% block copyright %}© 2019 Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}アクセシビリティに関する声明{% endblock %}
 
 {% block contributors_description %}
