--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -75,7 +75,7 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% macro edition(year) %}{{ year }} Edition{% endmacro %}
 
 {% block footer_title %}Footer navigation{% endblock %}
-{% block copyright %}© 2019 Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Accessibility Statement{% endblock %}
 
 {% block contributors_description %}
