--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -75,7 +75,7 @@ Nuestra misión es combinar las estadísticas y tendencias sin procesar del HTTP
 {% macro edition(year) %}Edición {{ year }}{% endmacro %}
 
 {% block footer_title %}Navegación de pie de página{% endblock %}
-{% block copyright %}© 2019 Web Almanac. Con licencia <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Con licencia <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Declaración de accesibilidad{% endblock %}
 
 {% block contributors_description %}
