--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -75,7 +75,7 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% macro edition(year) %}Édition {{ year }}{% endmacro %}
 
 {% block footer_title %}Navigation dans le pied de page{% endblock %}
-{% block copyright %}© 2019 Web Almanac. Sous licence <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Sous licence <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Déclaration d'accessibilité{% endblock %}
 
 {% block contributors_description %}
